--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>PDF Viewer</title>
+    <title>References</title>
 </head>
 <body>
     <h1>References.....</h1>
